--- a/md3/index.html
+++ b/md3/index.html
@@ -4,14 +4,8 @@
     <title>Assignment 3</title>
   </head>
   <body>
-    <link rel="stylesheet" href="/mds style/bootstrap.min.css" />
-    <link rel="stylesheet" href="/mds style/mds styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" type="text/css" href="/mds style/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/mds style/mds styles.css" />
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-brand">
